--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "@sendgrid/mail": "^7.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.4.15",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "sendgrid": "^5.2.3",
     "sequelize": "^5.12.1"
   },
   "devDependencies": {
