--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "nodemon": "^1.19.1"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
