--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "sch_project",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "14.x"
+  }
   "main": "server.js",
   "scripts": {
     "dev": "nodemon src/app.js --exec babel-node",
@@ -24,7 +27,11 @@
     "passport-jwt": "^4.0.0",
     "sendgrid": "^5.2.3",
     "sequelize": "^5.12.1",
-    "socket.io": "^3.0.3"
+    "socket.io": "^3.0.3",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -32,8 +39,6 @@
     "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "nodemon": "^1.19.1"
-  },
-  "engines": {
-    "node": "14.x"
   }
+  
 }
